--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,16 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC10"
+}
+
 allprojects {
     repositories {
         google()
         jcenter()
-        
     }
+    apply from: "$rootDir/detekt.gradle"
 }
 
 task clean(type: Delete) {
