--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Code reader
-    implementation "me.dm7.barcodescanner:zxing:1.9.13"
+    implementation('com.journeyapps:zxing-android-embedded:4.1.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
