--- a/contacts/build.gradle
+++ b/contacts/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.2'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.3"
 
     // Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // JWT
+    implementation 'com.auth0:java-jwt:3.10.2'
 }
