--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           java-version: 1.8
       - name: Unit tests
+        run: bash ./gradlew detekt --stacktrace
+      - name: Unit tests
         run: bash ./gradlew test --stacktrace
 
   apk:
