--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Unit tests
+      - name: Detekt check
         run: bash ./gradlew detekt --stacktrace
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
