--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.71'
     ext.lifecycle_version = '2.2.0'
+    ext.mockito_kotlin_version = '2.2.0'
 
     repositories {
         google()
