--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
       - name: Upload APK
         uses: actions/upload-artifact@v1
+        env:
+          SIGNED_RELEASE_FILE: ${{ env.SIGNED_RELEASE_FILE }}
         with:
           name: app
-          path: ${{ SIGNED_RELEASE_FILE }}
+          path: $SIGNED_RELEASE_FILE
