--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC10"
+    id "io.gitlab.arturbosch.detekt" version "1.7.4"
 }
 
 allprojects {
