--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,13 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    lintOptions {
+        abortOnError true
+        absolutePaths false
+        enable 'StopShip'
+        fatal 'StopShip'
+    }
 }
 
 dependencies {
